style.css
#dd {
/*  border: 1px solid black;
*//*  box-shadow: 4px 4px 4px #999; */

}

#container {
    /*background-color: #ddd;*/
}

#maincontainer {
  background: url('./name_site.png') no-repeat;
  background-size: 16%;

}


#containerb {
    display: inline-block;
    position: relative;
    width: 23%;
    left: 7%;
}

#containerc {
  display: inline-block;
  position: relative;
  width: 29%;
  left: 13%;
}

#containerd {
  display: inline-block;
    position: relative;
    width: 29%;
    left: 9%;
}

#containere {
  display: inline-block;
    position: relative;
    width: 42%;
    left: 18%;
}

#containerf {
  display: inline-block;
    position: relative;
    width: 32%;
    left: 18%;
}

#containerg {
  display: inline-block;
    position: relative;
    width: 62%;
    left: 17%;
}

#ad {
    padding-top: 50%;
    background-color: white;
}
#bd {
    padding-top: 40%;
}

#cd {
    padding-top: 90%; 
    /*background-color: red;*/
    border-radius: 50%;
}

#dd {
    padding-top: 70%;
    background-color: red;
    border-radius: 50%;
}
#ed {
    padding-top: 60%; 
/*    background-color: red;
*/}
#fd {
    padding-top: 60%;
}

#gd {
    padding-top: 66%;
    /*background-color: pink;*/
}

/*
.a, .b, .c {
  float: left;
  position: relative;
}

.d, .e, .f {
  float: right;
}*/

.a {
/*  width: 90%;
  height: 40%;
  margin: 9px;*/
/*  background-color: green;
*/}

.b {
 /* width: 239px;
  height: 180px;
  margin: 9px;*/
/*  background-image: url("./contact.png");
  background-repeat: no-repeat;
  background-position: center;
  background-color: #eee;
  border: 9px solid #204ec1;*/
  /*background-size: 70%;*/
}

.c {
  /*width: 98px;
  height: 269px;
  margin: 9px;*/
  background-image: url("./tracks.jpg");
  border-radius: 50%;
  background-size: 100%;
}

.d {
  /*width: 240px;
  height: 200px;
  margin: 9px;*/
  background-image: url("./polka_dot_dress.jpg");
  border-radius: 50%;
  background-size: 108%;

}

.e {
  /*width: 121px;
  height: 175px;
  margin: 9px;*/ 
  padding-left: 2%;
  padding-bottom: 1%;
}

.f {
  /*width: 185px;
  height: 230px;
  margin: 9px;*/
  padding:12px;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='rgb(140, 140, 140)', endColorstr='rgb(290, 290, 290)'); /* for IE */
  background: -webkit-gradient(linear, left top, left bottom, from(rgb(140, 140, 140)), to(rgb(290, 290, 290))); /* for webkit browsers */
  background: -moz-linear-gradient(top,  rgb(140, 140, 140),  rgb(290, 290, 290)); /* for firefox 3.6+ */
  z-index: 40;
  height: auto !important; 
 height:100%;

}

.g {
/*  width: 720px;
  height: 490px;
  clear: both;
  margin: 9px;
  margin-left: auto;
  margin-right: auto;*/
      border: 9px solid gray;
        background-image: url("./losttribes.jpeg");
            background-size: 100%;

}
/*I need to update height of content2 in @medias
*/
#content2 {  
    margin: 30px auto;   
    border:1px dotted #ccc;  
    overflow-x: scroll;
    display: inline-block;
    position: relative;
    width: 66%;
    height: 500px;
    left: 15%;
}

#images {
  width: 4860px;
}

#pd {
    padding-top: 66%;
    /*background-color: pink;*/
}

#pics {
    position: fixed;
    margin:20px 20px;  
    width:300px;  
    height:200px;  
    border:1px dotted #999;  
}


p a:hover {
  color: #787871;
  text-decoration: none;
}
p a:visited {
  color: black;
  text-decoration: none;
}
/*
.b:hover{
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -o-transform: scale(1.1);
  transform: scale(1.1);
    background-color: #ddd;
}*/

/*#job1, #job2, #job3 {
  width: 99%;
  height: 33%;
}*/

/*#job1:hover, #job2:hover, #job3:hover {
  -webkit-transform: scale(1.06);
  -moz-transform: scale(1.06);
  -o-transform: scale(1.06);
  transform: scale(1.06);
    background-color: #c1f4f3;
}*/

#job1 {
  /*background-color: green;*/
  /*background-image: url("./design.png");*/
  /*background-size: 42%;*/
  background-repeat: no-repeat;
  background-position: center;
}
#job2 {
  /*background-color: orange;*/
  /*background-image: url("./development.png");*/
  /*background-size: 70%;*/
  background-repeat: no-repeat;
  background-position: center;

}

#job3 {
  /*background-color: purple;*/
  /*background-image: url("./photography.png");*/
  background-size: 70%;
  background-repeat: no-repeat;
  background-position: center;
}


#myname {
  font-weight: bold;
  font-family: 'Playfair Display', sans-serif;
  font-size: 2.5em;
  display: inline-block;
  position: relative;
  width: 24%;
  left: 2%;
  /*border: 1px solid black;*/
  /*width: 26%;*/
}

#contactinfo {
  text-align: center;
  display: none;
  width: 100%;
  height: 100%;
  position: absolute;
  font-size: 1.4em;
  background-color: #f7f0a3;
}

.bigborder {
  border: 30px solid black;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin-left: -8px;
  margin-top: -8px;
}

#returnclick {
padding: 10px;
width: 140px;
margin-right: auto;
margin-left: auto;
border: 1px solid black;
}

.a, .b, .c, .d, .e, .f, .g {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 11;
}

p {
  z-index: 20;
}

.pictureContainer {
    height: 82px;
    width: 416px;
    overflow: hidden;
   /*background-image: url("./contact.png");*/
/*  background-repeat: no-repeat;
  background-position: center;*/
/*    background-color: #eee;
    border: 9px solid #204ec1;*/
    /*background-size: 70%;*/

}

.pictureContainer img {
    position: relative;
    top: 0px;

    -webkit-transition: top .2s ease-in-out;
    -moz-transition: top .2s ease-in-out;
    -o-transition: top .2s ease-in-out;
    transition: top .2s ease-in-out;

}
.pictureContainer img:hover {
    top: -85px;
}

.pictureContainer img:active {
  /*border: 2px solid black;*/
    color: #fff;
    box-shadow: 0 1px 0 #666, 0 2px 0 #444, 0 2px 2px rgba(0,0,0,0.9);
    -webkit-transform: translateY(3px);
    transform: translateY(3px);
    -webkit-animation: none;
    animation: none;
    }



/************** AT MEDIA RULES ************/
/* Large desktop */
@media (min-width: 1310px) {
 body { font-size:100%;
 line-height: 100%;}
 #maincontainer {
  background-position: 0px 255px;} 
#images img {
  max-width: 50%;
}
/*also shrink the div pics are in
*/
}

@media (min-width: 980px) and (max-width: 1309px) {
 body { font-size:84%;
 line-height: 82%;}
 #maincontainer {
  background-position: 0px 240px;
  background-size: 18%;
}

#content2 {  
  width: 80%;
    left: 9%;
}

.pictureContainer {
    height: 57px;
    width: 291px;
}
.pictureContainer img{
  max-width: 291px;
  max-height: 116px;
}
.pictureContainer img:hover {
    top: -58px;
}

#images img {
  max-width: 50%;
}
}

@media (min-width: 860px) and (max-width: 979px) {
 body { font-size:75%;
 line-height: 75%;}
 #maincontainer {
  background-position: 0px 230px;
  background-size: 21%;

} 
/*#images img {
  max-width: 50%;
}*/
#content2 {  
  width: 85%;
    left: 7%;
}
.pictureContainer {
    height: 41px;
    width: 208px;
}
.pictureContainer img{
  max-width: 208px;
  max-height: 82px;
}
.pictureContainer img:hover {
    top: -41px;
}

     #contactinfo {
  font-size: 1.6em;
}
}

/* Portrait tablet to landscape and desktop */
@media (min-width: 768px) and (max-width: 859px) {
 body { font-size:60%;
  line-height: 170%;}
  #maincontainer {
  background-position: 0px 160px;
    background-size: 23%;
}
/* #images img {
  max-width: 50%;
 }*/
#content2 {  
  width: 90%;
    left: 5%;

}
 .pictureContainer {
    height: 41px;
    width: 208px;
}
.pictureContainer img{
  max-width: 208px;
  max-height: 82px;
}
.pictureContainer img:hover {
    top: -41px;
}
      
 #contactinfo {
  font-size: 2em;
}
}

/* Landscape phone to portrait tablet */
@media (min-width: 481px) and (max-width: 767px) {
 body { font-size:50%;
  line-height: 120%;}
  #maincontainer {
  background-position: 0px 25px;
    background-size: 30%;
  }
/*   #images img {
  max-width: 7%;
    }*/
#content2 {  
  width: 90%;
  left: 4%;
}
  
.pictureContainer {
    height: 41px;
    width: 208px;
}
.pictureContainer img{
  max-width: 208px;
  max-height: 82px;
}
.pictureContainer img:hover {
    top: -41px;
}
  #contactinfo {
  font-size: 2.7em;
}

#containerc {
  opacity: 0;
}

}

/* Landscape phones and down */
@media (max-width: 480px) {
 body { font-size:25%; 
  line-height: 30%;}
  #maincontainer {
  background-position: 0px 15px;
  background-size: 50%;
}
/*  #images img {
  max-width: 5%;
  } */

  #content2 {  
    width: 95%;
    left: 2%;
}
.pictureContainer {
    height: 41px;
    width: 208px;
}
.pictureContainer img{
  max-width: 208px;
  max-height: 82px;
}
.pictureContainer img:hover {
    top: -41px;
}

  #contactinfo {
  font-size: 4.2em;
}

#containerc {
  opacity: 0;
}
}
/**************  ************/

